--- a/app/styles/theme-overrides.css
+++ b/app/styles/theme-overrides.css
@@ -205,3 +205,32 @@ body {
 #internal-comment-box {
     background-color: #f9f9f9;
 }
+
+
+/*ng-prompt*/
+
+.modal-header {
+    padding-bottom: 0px !important;
+    border-bottom: 0px !important;
+}
+
+.modal-header h4 {
+    font-size: 1.125rem;
+    line-height: 3.5rem;
+    white-space: nowrap;
+}
+
+.modal-footer {
+    border-top: 0px !important;
+    padding-top: 0px !important;
+}
+
+.modal-footer button:last-child {
+    margin-left: 12px !important;
+}
+
+@media (min-width: 544px) {
+    .modal-dialog {
+        max-width: 400px;
+    }
+}
