allow copy reporerter details to open new issue

--- a/app/views/servicerequests/_partials/action_bar.html
+++ b/app/views/servicerequests/_partials/action_bar.html
@@ -21,27 +21,12 @@
             </span>
         </a>
     </li>
-    <!-- <li class="nav-item hidden-sm-down b-l p-l p-r">
-        <a class="nav-link text-muted no-border" title="Work Logs">
+    <li class="nav-item b-l p-l p-r">
+        <a ng-click="onCopy()" class="nav-link text-muted no-border" title="Click To Copy Reporter Information & Create New Issue">
             <span class="nav-text">
-                <i class="fa fa-hourglass-o"></i>
+                <i class="icon-magic-wand"></i>
             </span>
         </a>
     </li>
-    <li class="nav-item hidden-sm-down b-l p-l p-r">
-        <a class="nav-link text-muted no-border" title="Notifications">
-            <span class="nav-text">
-                <i class="fa fa-bell-o"></i>
-                <b class="label rounded danger up">3</b>
-            </span>
-        </a>
-    </li>
-    <li title="Delete Issue" class="nav-item b-l p-l">
-        <a ng-click="delete(servicerequest)" class="nav-link text-muted no-border">
-            <span class="nav-text">
-                <i class="fa fa-trash-o"></i>
-            </span>
-        </a>
-    </li> -->
 </ul>
 <!-- end servicerequest detail action bar -->
