--- a/app/views/_partials/aside.html
+++ b/app/views/_partials/aside.html
@@ -21,7 +21,7 @@
                 <li class="nav-header hidden-folded">
                     <span class="text-xs">Main</span>
                 </li>
-                <li>
+                <li ui-sref-active="active">
                     <a ui-sref="app.servicerequests.list" title="Issues & Service Request">
                         <span class="nav-icon">
                             <i class="ion-chatbubble-working"></i>
@@ -29,7 +29,7 @@
                         <span class="nav-text">Issues</span>
                     </a>
                 </li>
-                <li>
+                <li ui-sref-active="active">
                     <a ui-sref="app.create_servicerequests" title="Report New Issue or Service Request">
                         <span class="nav-icon">
                             <i class="ion-plus-circled"></i>
@@ -53,7 +53,7 @@
                         <span class="nav-text">Visualize</span>
                     </a>
                 </li>
-                <li>
+                <li ui-sref-active="active">
                     <a ui-sref="app.manage.jurisdictions" title="Manage System">
                         <span class="nav-icon">
                             <i class="ion-gear-a"></i>
