add logo_sm and logo_md to support jurisdiction to customize logos

--- a/app/views/_partials/aside.html
+++ b/app/views/_partials/aside.html
@@ -3,12 +3,7 @@
     <!-- start brand details -->
     <div class="navbar no-radius">
         <a title="{{ENV.title}} | {{ENV.description}}" ui-sref="app.servicerequests.list" class="navbar-brand">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" width="32" height="32">
-                <circle cx="24" cy="24" r="24" style="fill: rgba(120,130,140,0.7);"></circle>
-                <circle cx="24" cy="0" r="2" fill="#ffffff" class="brand-animate"></circle>
-                <text dy="10" x="50%" y="50%" text-anchor="middle" style="fill: #ffffff; stroke: none; font-size: 40px;">a</text>
-            </svg>
-            <img src="images/logo.png" alt="." class="hide">
+            <img src="images/logo_sm.png" alt="." width="48" class="m-t-sm">
             <span class="hidden-folded inline">aside</span>
         </a>
     </div>
