--- a/app/views/auth/forgot.html
+++ b/app/views/auth/forgot.html
@@ -5,7 +5,7 @@
             <div class="panel">
                 <div class="panel-body">
                     <div class="brand margin-top-80 margin-bottom-40">
-                        <h2 class="brand-text text-blue-600 font-size-20">{{ENV.title}}<strong class="text-blue-600 font-size-10">{{ENV.version}}</strong></h2>
+                        <img src="images/logo_md.png" alt="." width="84">
                     </div>
                     <p class="text-center font-size-12 margin-bottom-60 text-grey-700">Enter your e-mail address below to reset your password</p>
                     <form ng-submit="forgot()" name="forgotForm" role="form" autocomplete="off">
