--- a/app/views/auth/signin.html
+++ b/app/views/auth/signin.html
@@ -5,7 +5,7 @@
             <div class="panel">
                 <div class="panel-body">
                     <div class="brand margin-top-80 margin-bottom-60">
-                        <h2 class="brand-text text-blue-600 font-size-20 brand-color">{{ENV.title}}<strong class="text-blue-600 font-size-10 brand-color">{{ENV.version}}</strong></h2>
+                        <img src="images/logo_md.png" alt="." width="84">
                     </div>
                     <form ng-submit="signin()" name="signinForm" role="form" autocomplete="off">
                         <div class="form-group form-material floating">
