update jurisdiction ui to add email, phone, physical address, longitude and latitude

--- a/app/views/jurisdictions/_partials/list.html
+++ b/app/views/jurisdictions/_partials/list.html
@@ -29,13 +29,13 @@
                             </span>
                         </div>
                         <div class="list-body">
-                            <span title="Jurisdiction Code" class="pull-right text-xs text-muted">
-                                {{jurisdiction.code}}
+                            <span title="Jurisdiction Phone Number" class="pull-right text-xs text-muted">
+                                {{jurisdiction.phone}}
                             </span>
                             <div class="item-title">
                                 <span title="Jurisdiction Name" class="_500">{{jurisdiction.name}}</span>
                             </div>
-                            <p title="Jurisdiction Description" class="block text-muted text-ellipsis">
+                            <p title="Jurisdiction Details" class="block text-muted text-ellipsis">
                                 {{jurisdiction.about}}
                             </p>
                         </div>
