--- a/app/views/jurisdictions/_partials/detail.html
+++ b/app/views/jurisdictions/_partials/detail.html
@@ -13,29 +13,66 @@
                     <form ng-submit="save()" name="jurisdictionForm" role="form" autocomplete="off" novalidate>
                         <div class="box">
                             <div class="box-body">
-                                <div class="m-b" title="Jurisdiction Name">
+                                <div title="Jurisdiction Name">
                                     <div class="form-group form-material floating">
                                         <input ng-disabled="!edit" ng-model="jurisdiction.code" ng-required ng-minlength="1" type="text" name="code" class="form-control" />
                                         <label title="Jurisdiction Code" class="floating-label">Code</label>
                                     </div>
                                 </div>
-                                <div class="m-t-lg" title="Jurisdiction Name">
-                                    <div class="form-group form-material floating">
-                                        <input ng-disabled="!edit" ng-model="jurisdiction.name" ng-required ng-minlength="2" type="text" name="name" class="form-control" />
-                                        <label title="Jurisdiction Name" class="floating-label">Name</label>
+                                <div class="row m-t-lg">
+                                    <div class="col-sm-6" title="Jurisdiction Name">
+                                        <div class="form-group form-material floating">
+                                            <input ng-disabled="!edit" ng-model="jurisdiction.name" ng-required ng-minlength="2" type="text" name="name" class="form-control" />
+                                            <label title="Jurisdiction Name" class="floating-label">Name</label>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6" title="Jurisdiction Phone">
+                                        <div class="form-group form-material floating">
+                                            <input ng-disabled="!edit" ng-model="jurisdiction.phone" ng-required ng-minlength="2" type="text" name="phone" class="form-control" />
+                                            <label title="Mobile Phone Number" class="floating-label">Phone</label>
+                                        </div>
                                     </div>
                                 </div>
-                                 <div class="m-t-lg" title="Jurisdiction Domain">
-                                    <div class="form-group form-material floating">
-                                        <input ng-disabled="!edit" ng-model="jurisdiction.domain" ng-required ng-minlength="2" type="text" name="domain" class="form-control" />
-                                        <label title="Domain Name" class="floating-label">Domain</label>
+                                <div class="row m-t-lg">
+                                    <div class="col-sm-6" title="Jurisdiction Email">
+                                        <div class="form-group form-material floating">
+                                            <input ng-disabled="!edit" ng-model="jurisdiction.email" ng-required ng-minlength="2" type="text" name="email" class="form-control" />
+                                            <label title="Email Address" class="floating-label">Email</label>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6" title="Jurisdiction Domain">
+                                        <div class="form-group form-material floating">
+                                            <input ng-disabled="!edit" ng-model="jurisdiction.domain" ng-required ng-minlength="2" type="text" name="domain" class="form-control" />
+                                            <label title="Domain Name" class="floating-label">Domain</label>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="m-t-lg" title="Jurisdiction Weight">
+                                <div class="row m-t-lg">
+                                    <div class="col-sm-6" title="Jurisdiction Longitude">
+                                        <div class="form-group form-material floating">
+                                            <input ng-disabled="!edit" ng-model="jurisdiction.longitude" ng-required type="number" name="longitude" class="form-control" />
+                                            <label title="Longitude" class="floating-label">Longitude</label>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6" title="Jurisdiction Latitude">
+                                        <div class="form-group form-material floating">
+                                            <input ng-disabled="!edit" ng-model="jurisdiction.latitude" ng-required type="number" name="latitude" class="form-control" />
+                                            <label title="Latitude" class="floating-label">Latitude</label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="m-t-lg" title="Jurisdiction Details">
                                     <div class="form-group form-material floating">
-                                        <textarea ng-disabled="!edit" ng-model="jurisdiction.about" msd-elastic name="about" class="form-control" rows="3">
+                                        <textarea ng-disabled="!edit" ng-model="jurisdiction.about" msd-elastic name="about" class="form-control" rows="2">
                                         </textarea>
                                         <label class="floating-label">About</label>
+                                    </div>
+                                </div>
+                                <div class="m-t-lg" title="Jurisdiction Physical Address">
+                                    <div class="form-group form-material floating">
+                                        <textarea ng-disabled="!edit" ng-model="jurisdiction.address" msd-elastic name="about" class="form-control" rows="2">
+                                        </textarea>
+                                        <label class="floating-label">Physical Address</label>
                                     </div>
                                 </div>
                             </div>
