force jurisdiction color on letter  avatar

--- a/app/views/jurisdictions/_partials/list.html
+++ b/app/views/jurisdictions/_partials/list.html
@@ -24,7 +24,7 @@
                             <span class="w-40 avatar circle">
                                 <letter-avatar title="Jurisdiction Code" 
                                 data="{{jurisdiction.code}}" 
-                                    height="60" width="60" shape="round">
+                                    height="60" width="60" color="{{jurisdiction.color}}" shape="round">
                                 </letter-avatar>
                             </span>
                         </div>
