allow issue printing in pdf

--- a/app/views/servicerequests/_partials/action_bar.html
+++ b/app/views/servicerequests/_partials/action_bar.html
@@ -21,10 +21,17 @@
             </span>
         </a>
     </li>
-    <li class="nav-item b-l p-l p-r">
+    <li class="nav-item b-l p-l">
         <a ng-click="onCopy()" class="nav-link text-muted no-border" title="Click To Copy Reporter Information & Create New Issue">
             <span class="nav-text">
                 <i class="ti-cut"></i>
+            </span>
+        </a>
+    </li>
+    <li class="nav-item b-l p-l p-r">
+        <a print-btn class="nav-link text-muted no-border" title="Click To Print Issue">
+            <span class="nav-text">
+                <i class="icon-printer"></i>
             </span>
         </a>
     </li>
