--- a/app/views/servicerequests/_partials/detail.html
+++ b/app/views/servicerequests/_partials/detail.html
@@ -6,7 +6,7 @@
         <!-- end servicerequest details action bar -->
     </div>
     <!-- start servicerequest body -->
-    <div class="row-row">
+    <div class="row-row" print-section>
         <div class="row-body">
             <div class="row-inner">
                 <div class="padding">
