--- a/app/views/servicerequests/_partials/list.html
+++ b/app/views/servicerequests/_partials/list.html
@@ -59,7 +59,7 @@
             <a title="Click To Refresh Issues" ng-click="load()" class="btn btn-default btn-xs">
                 <i class="icon-reload"></i>
             </a>
-            <a title="Click To Export Issues" class="btn btn-default btn-xs" ng-csv="export" csv-header="['Issue Number','Call Start Time', 'Call End Time','Call Duration(Seconds)', 'Reporter Name', 'Reporter Phone', 'Reporter Account', 'Operator', 'Area', 'Nature', 'Assignee', 'Description', 'Address', 'Status', 'Priority']" filename="issues.csv">
+            <a title="Click To Export Issues" class="btn btn-default btn-xs" ng-csv="export" csv-header="['Issue Number','Reported Date','Call Start Time', 'Call End Time','Call Duration(Seconds)', 'Reporter Name', 'Reporter Phone', 'Reporter Account', 'Operator', 'Area', 'Nature', 'Assignee', 'Description', 'Address', 'Status', 'Priority', 'Resolved Date', 'Time Taken(hrs)', 'Time Taken(mins)', 'Time Taken(secs)']" filename="issues.csv">
                 <i class="icon-cloud-download"></i>
             </a>
         </div>
