clear unused files

--- a/app/views/_parties/_partials/list.html
+++ b/app/views/_parties/_partials/list.html
@@ -1,10 +1,10 @@
-<!-- start roles list -->
+<!-- start parties list -->
 <div class="row-col lt">
-    <!-- start roles list search -->
+    <!-- start parties list search -->
     <div class="p-a b-b search-settings">
         <form>
             <div class="input-group">
-                <input type="text" ng-change="onSearch()" ng-model="search.q" class="form-control form-control-sm" placeholder="Search Roles ...">
+                <input type="text" ng-change="onSearch()" ng-model="search.q" class="form-control form-control-sm" placeholder="Search Users ...">
                 <span class="input-group-btn">
                     <button class="btn btn-default btn-sm no-shadow" type="button">
                         <i class="ti-search"></i>
@@ -13,27 +13,30 @@
             </div>
         </form>
     </div>
-    <!-- end role list search -->
-    <!-- start role listing -->
+    <!-- end party list search -->
+    <!-- start party listing -->
     <div class="row-row">
         <div class="row-body scrollable hover">
             <div class="row-inner">
                 <div class="list" data-ui-list="info">
-                    <div ng-click="select(role)" class="list-item list-item-padded" ng-repeat="role in roles" title="{{role.description}}">
+                    <div ng-click="select(party)" class="list-item list-item-padded" ng-repeat="party in parties" title="{{party.description}}">
                         <div class="list-left">
                             <span class="w-40 avatar circle">
-                                <letter-avatar title="Role Visual Color" 
-                                data="{{role.name}}" 
-                                    height="60" width="60" color="{{role.color}}" shape="round">
+                                <letter-avatar title="Status & Area" 
+                                data="{{party.name}}" 
+                                    height="60" width="60" shape="round">
                                 </letter-avatar>
                             </span>
                         </div>
                         <div class="list-body">
-                            <div class="item-title" title="Role Name">
-                                <span class="_500">{{role.name}}</span>
+                            <span class="pull-right text-xs text-muted">
+                                {{party.relation.type}}
+                            </span>
+                            <div class="item-title">
+                                <span class="_500">{{party.name}}</span>
                             </div>
-                            <p title="Role Description" class="block text-muted text-ellipsis">
-                                {{role.description}}
+                            <p class="block text-muted text-ellipsis">
+                                {{party.jurisdiction.name}}
                             </p>
                         </div>
                     </div>
@@ -41,7 +44,7 @@
             </div>
         </div>
     </div>
-    <!-- end role listing -->
+    <!-- end party listing -->
     <!-- TODO use infinite scroll insteady of pagination -->
     <div class="p-x-md p-y">
         <div class="btn-group pull-right">
@@ -55,4 +58,4 @@
         <span class="text-sm text-muted">Total: {{total}}</span>
     </div>
 </div>
-<!-- end roles list -->
+<!-- end parties list -->
