--- a/app/views/manage/side_subnav.html
+++ b/app/views/manage/side_subnav.html
@@ -64,12 +64,12 @@
                     <div class="nav-active-white">
                         <ul class="nav">
                             <li ui-sref-active="active" class="nav-item m-b-xs">
-                                <a hre="#" class="nav-link text-muted block">
-                                Users
+                                <a ui-sref="app.manage.parties" class="nav-link text-muted block">
+                                Parties
                                 </a>
                             </li>
                             <li ui-sref-active="active" class="nav-item m-b-xs">
-                                <a hre="#" class="nav-link text-muted block">
+                                <a ui-sref="app.manage.roles" class="nav-link text-muted block">
                                 Roles
                                 </a>
                             </li>
