--- a/app/views/servicerequests/_partials/create.html
+++ b/app/views/servicerequests/_partials/create.html
@@ -63,7 +63,7 @@
                                     </div>
                                 </div>
                                 <div class="form-group form-material floating">
-                                    <textarea ng-model="servicerequest.addess" msd-elastic name="address" class="form-control" rows="2">
+                                    <textarea ng-model="servicerequest.address" msd-elastic name="address" class="form-control" rows="2">
                                     </textarea>
                                     <label class="floating-label">Address</label>
                                 </div>
