--- a/app/styles/theme-overrides.css
+++ b/app/styles/theme-overrides.css
@@ -255,3 +255,7 @@ body {
 .nav > .nav-item:focus .text-muted {
     opacity: 1;
 }
+
+.box {
+    /*border: 1px solid rgba(120, 130, 140, .13);*/
+}
