--- a/app/views/_partials/aside.html
+++ b/app/views/_partials/aside.html
@@ -32,22 +32,22 @@
                         <span class="nav-text">New Issue</span>
                     </a>
                 </li>
-                <li>
-                    <a href="#" title="Issue Summary Reports">
+                <li ui-sref-active="active">
+                    <a ui-sref="app.overviews" title="Overviews">
                         <span class="nav-icon">
                             <i class="ion-pie-graph"></i>
                         </span>
-                        <span class="nav-text">Summaries</span>
+                        <span class="nav-text">Overviews</span>
                     </a>
                 </li>
-                <li>
+                <!-- <li>
                     <a href="#" title="Visualization Issues">
                         <span class="nav-icon">
                             <i class="ion-location"></i>
                         </span>
                         <span class="nav-text">Visualize</span>
                     </a>
-                </li>
+                </li> -->
                 <li ui-sref-active="active">
                     <a ui-sref="app.manage.jurisdictions" title="Manage System">
                         <span class="nav-icon">
