--- a/app/views/parties/_partials/detail.html
+++ b/app/views/parties/_partials/detail.html
@@ -10,51 +10,47 @@
         <div class="row-body">
             <div class="row-inner">
                 <div class="padding">
-                    <!-- start party party -->
-                    <h4 class="_600">
-                        {{party.name}}
-                        <span class="pull-right font-size-14" title="Jurisdiction">
-                        <span class="text-muted font-size-10">Area</span>
-                        {{party.jurisdiction.name}}
-                    </span>
-                    </h4>
-                    <!-- end party party -->
-                    <div class="p-y">
-                        <div title="Email">
-                            <span class="text-muted font-size-12">Email: </span>
-                            <span>{{party.email}}</span>
-                        </div>
-                        <div title="Phone Number">
-                            <span class="text-muted font-size-12">Phone #: </span>
-                            <span>{{party.phone}}</span>
-                        </div>
+                    <form ng-submit="save()" name="partyForm" role="form" autocomplete="off" novalidate>
+                        <div class="box">
+                            <div class="box-body">
+                                <div class="row m-t-lg">
+                                    <div class="col-sm-6" title="Party Name">
+                                        <div class="form-group form-material floating">
+                                            <input ng-disabled="!edit" ng-model="party.name" ng-required ng-minlength="2" type="text" name="name" class="form-control" />
+                                            <label title="Party Name" class="floating-label">Name</label>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6" title="Party Phone">
+                                        <div class="form-group form-material floating">
+                                            <input ng-disabled="!edit" ng-model="party.phone" ng-required ng-minlength="2" type="text" name="phone" class="form-control" />
+                                            <label title="Mobile Phone Number" class="floating-label">Phone</label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row m-t-lg">
+                                    <div class="col-sm-6" title="Party Email">
+                                        <div class="form-group form-material floating">
+                                            <input ng-disabled="!edit" ng-model="party.email" ng-required ng-minlength="2" type="text" name="email" class="form-control" />
+                                            <label title="Email Address" class="floating-label">Email</label>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6" title="Party Area">
+                                        <div ng-show="!edit" class="form-group form-material floating">
+                                            <input ng-disabled="!edit" ng-model="party.jurisdiction.name" ng-required ng-minlength="2" type="text" name="area" class="form-control" />
+                                            <label title="Area" class="floating-label">Area</label>
+                                        </div>
+                                        <div ng-show="edit" class="form-group form-material floating">
+                                            <oi-select oi-options="item.name for item in jurisdictions track by item.id" ng-model="party.jurisdiction" placeholder="Select Area" class="form-control"></oi-select>
+                                            <label title="Area" class="floating-label">Area</label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                    </form>
                     </div>
-                    <div class="p-y b-t">
-                        <span title="Jurisdiction">
-                            <span class="text-muted font-size-12">Jurisdiction: </span>
-                        <a href="mailto:{{party.operator.email}}">
-                            {{party.jurisdiction.name}}
-                        </a>
-                        </span>
-                        <span title="Relation" class="m-l">
-                            <span class="text-muted font-size-12">Title: </span>
-                        <a href="mailto:{{party.operator.email}}">
-                            {{party.relation.type}}
-                        </a>
-                        </span>
-                    </div>
-                </div>
-                <!-- start issue description -->
-                <div class="padding b-t">
-                    <h6 class="m-b" title="Service Description">Description</h6>
-                    <p class="text-lt">
-                        {{party.description}}
-                    </p>
-                    <p>&nbsp;</p>
                 </div>
             </div>
         </div>
+        <!-- end party body -->
     </div>
-    <!-- end party body -->
-</div>
-<!-- end party details -->
+    <!-- end party details -->
