--- a/app/views/parties/_partials/list.html
+++ b/app/views/parties/_partials/list.html
@@ -4,7 +4,7 @@
     <div class="p-a b-b search-settings">
         <form>
             <div class="input-group">
-                <input type="text" ng-change="onSearch()" ng-model="search.q" class="form-control form-control-sm" placeholder="Search Users ...">
+                <input type="text" ng-change="onSearch()" ng-model="search.q" class="form-control form-control-sm" placeholder="Search Parties ...">
                 <span class="input-group-btn">
                     <button class="btn btn-default btn-sm no-shadow" type="button">
                         <i class="ti-search"></i>
@@ -19,24 +19,24 @@
         <div class="row-body scrollable hover">
             <div class="row-inner">
                 <div class="list" data-ui-list="info">
-                    <div ng-click="select(party)" class="list-item list-item-padded" ng-repeat="party in parties" title="{{party.description}}">
+                    <div ng-click="select(party)" class="list-item list-item-padded" ng-repeat="party in parties" title="{{party.about}}">
                         <div class="list-left">
                             <span class="w-40 avatar circle">
-                                <letter-avatar title="Status & Area" 
+                                <letter-avatar title="Avatar" 
                                 data="{{party.name}}" 
                                     height="60" width="60" shape="round">
                                 </letter-avatar>
                             </span>
                         </div>
                         <div class="list-body">
-                            <span class="pull-right text-xs text-muted">
-                                {{party.relation.type}}
+                            <span title="Working Area" class="pull-right text-xs text-muted">
+                                {{party.jurisdiction.name}}
                             </span>
-                            <div class="item-title">
+                            <div class="item-title" title="Full Name">
                                 <span class="_500">{{party.name}}</span>
                             </div>
-                            <p class="block text-muted text-ellipsis">
-                                {{party.jurisdiction.name}}
+                            <p title="Work Description" class="block text-muted text-ellipsis">
+                                {{party.relation.type}}
                             </p>
                         </div>
                     </div>
